--- a/.github/workflows/touch production.yml
+++ b/.github/workflows/touch production.yml
@@ -27,6 +27,9 @@ jobs:
       uses: actions/upload-artifact@v2
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
+      with:
+        name: build
+        path: build
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_PROD_BUCKET_NAME }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
