--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -25,11 +25,12 @@ jobs:
         yarn build
     - name: Archive build artifact
       uses: actions/upload-artifact@v2
-    - name: Deploy to S3
-      uses: jakejarvis/s3-sync-action@master
       with:
         name: build
-        path: /build
+        path: build
+    - name: Deploy to S3
+      uses: jakejarvis/s3-sync-action@master
+      
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_PROD_BUCKET_NAME }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
