--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "react": "latest",
     "react-dom": "latest",
     "react-typed": "^1.2.0",
+    "sharp": "^0.31.3",
     "simple-icons": "^4.11.0",
     "webpack": "^4.46.0"
   },
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
     "deploy": "npx vercel --prod"
